@@ -545,12 +545,8 @@ bool Manager::PublishLogWrite(EnumVal* stream, EnumVal* writer, string path, int
 	std::string serial_data(data, len);
 	free(data);
 
-	val_list vl{
-		stream->Ref(),
-		new StringVal(path),
-	};
-
-	auto v = log_topic_func->Call(&vl);
+	auto v = log_topic_func->Call(IntrusivePtr{NewRef{}, stream},
+	                              make_intrusive<StringVal>(path));
 
 	if ( ! v )
 		{
